Refactor handler and internal openapi specs
